--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
         <title>Welcome | Three Poets</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="css/index2.css">
+        <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
 	<header>
-			<p id="site_name">Three Poets</p>
+		<p id="site_name">Three Poets</p>
 	</header>
 	<nav id="left_region">
 		<ul class="vertical_menu">
